WLTS-5 - Allow FTAs to run